refactor: 주문 생성 로직 도메인 객체 내부로 변경