@@ -7,11 +7,11 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import kitchenpos.application.request.OrderCreateRequest;
+import kitchenpos.application.request.OrderLineItemCreateRequest;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.MenuProduct;
@@ -67,7 +67,9 @@ class OrderServiceTest extends ServiceTest {
     void setUp() {
         Product product = productRepository.save(new Product("족발", BigDecimal.valueOf(1000.00)));
         Long menuGroupId = menuGroupRepository.save(new MenuGroup("세트")).getId();
-        menu = menuRepository.save(new Menu("황족발", BigDecimal.valueOf(1800.00), menuGroupId, List.of(new MenuProduct(product, 2))));
+        menu = menuRepository.save(
+            new Menu("황족발", BigDecimal.valueOf(1800.00), menuGroupId, List.of(new MenuProduct(product, 2))));
+
     }
 
     @Nested
@@ -77,10 +79,11 @@ class OrderServiceTest extends ServiceTest {
         void 성공() {
             // given
             Long orderTableId = orderTableRepository.save(new OrderTable(5, false)).getId();
-            Order order = new Order(orderTableId, COMPLETION, LocalDateTime.now(), List.of(new OrderLineItem(menu.getId(), 2)));
+            var orderLineItem = new OrderLineItemCreateRequest(menu.getId(), 2);
+            var request = new OrderCreateRequest(orderTableId, List.of(orderLineItem));
 
             // when
-            Order actual = orderService.create(order);
+            Order actual = orderService.create(request);
 
             // then
             assertAll(
@@ -94,14 +97,10 @@ class OrderServiceTest extends ServiceTest {
         void 오더라인_아이템이_없으면_예외() {
             // given
             Long orderTableId = orderTableRepository.save(new OrderTable(5, false)).getId();
-            Order order = new Order(
-                orderTableId,
-                COMPLETION,
-                LocalDateTime.now(),
-                Collections.emptyList());
+            var request = new OrderCreateRequest(orderTableId, Collections.emptyList());
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -109,14 +108,11 @@ class OrderServiceTest extends ServiceTest {
         void 주문한_메뉴가_없는_메뉴가_있으면_예외() {
             // given
             Long orderTableId = orderTableRepository.save(new OrderTable(5, false)).getId();
-            Order order = new Order(
-                orderTableId,
-                COMPLETION,
-                LocalDateTime.now(),
-                Arrays.asList(new OrderLineItem(menu.getId(), 2), new OrderLineItem(100L, 3)));
+            var orderLineItem = new OrderLineItemCreateRequest(-1L, 1);
+            var request = new OrderCreateRequest(orderTableId, List.of(orderLineItem));
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -124,14 +120,11 @@ class OrderServiceTest extends ServiceTest {
         void 주문테이블이_비어있으면_예외() {
             // given
             Long orderTableId = orderTableRepository.save(new OrderTable(5, true)).getId();
-            Order order = new Order(
-                orderTableId,
-                COMPLETION,
-                LocalDateTime.now(),
-                Arrays.asList(new OrderLineItem(menu.getId(), 2)));
+            var orderLineItem = new OrderLineItemCreateRequest(menu.getId(), 2);
+            var request = new OrderCreateRequest(orderTableId, List.of(orderLineItem));
 
             // when && then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
         }
     }
@@ -140,20 +133,21 @@ class OrderServiceTest extends ServiceTest {
     void 주문_목록을_조회한다() {
         // given
         List<Order> expected = new ArrayList<>();
-        Long orderTableIdA = orderTableRepository.save(new OrderTable(5, true)).getId();
-        expected.add(orderRepository.save(new Order(orderTableIdA, COOKING, Collections.emptyList())));
+        OrderTable orderTableA = orderTableRepository.save(new OrderTable(5, false));
+        expected.add(orderRepository.save(new Order(orderTableA, COOKING, List.of(new OrderLineItem(1L, 5)))));
 
-        Long orderTableIdB = orderTableRepository.save(new OrderTable(5, true)).getId();
-        expected.add(orderRepository.save(new Order(orderTableIdB, COOKING, Collections.emptyList())));
+        OrderTable orderTableB = orderTableRepository.save(new OrderTable(5, false));
+        expected.add(orderRepository.save(new Order(orderTableB, COOKING, List.of(new OrderLineItem(1L, 5)))));
 
-        Long orderTableIdC = orderTableRepository.save(new OrderTable(5, true)).getId();
-        expected.add(orderRepository.save(new Order(orderTableIdC, COOKING, Collections.emptyList())));
+        OrderTable orderTableC = orderTableRepository.save(new OrderTable(5, false));
+        expected.add(orderRepository.save(new Order(orderTableC, COOKING, List.of(new OrderLineItem(1L, 5)))));
 
         // when
         List<Order> actual = orderService.list();
 
         // then
         assertThat(actual).usingRecursiveComparison()
+            .ignoringFields("orderTable")
             .isEqualTo(expected);
     }
 
@@ -164,8 +158,8 @@ class OrderServiceTest extends ServiceTest {
         @CsvSource(value = {"COOKING : MEAL", "MEAL : COOKING"}, delimiter = ':')
         void 변경_성공(OrderStatus originStatus, OrderStatus changedStatus) {
             // given
-            Long orderTableIdA = orderTableRepository.save(new OrderTable(5, true)).getId();
-            Long orderId = orderRepository.save(new Order(orderTableIdA, originStatus, Collections.emptyList()))
+            OrderTable orderTableA = orderTableRepository.save(new OrderTable(5, false));
+            Long orderId = orderRepository.save(new Order(orderTableA, originStatus, List.of(new OrderLineItem(1L, 5))))
                 .getId();
 
             // when
@@ -178,8 +172,8 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void 바꿀려는_주문의_상태가_완료면_예외() {
             // given
-            Long orderTableIdA = orderTableRepository.save(new OrderTable(5, true)).getId();
-            Long orderId = orderRepository.save(new Order(orderTableIdA, COMPLETION, Collections.emptyList()))
+            OrderTable orderTableA = orderTableRepository.save(new OrderTable(5, false));
+            Long orderId = orderRepository.save(new Order(orderTableA, COMPLETION, List.of(new OrderLineItem(1L, 5))))
                 .getId();
 
             // when && then
