@@ -5,18 +5,26 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
+import java.math.BigDecimal;
 import java.util.List;
 import kitchenpos.application.request.OrderTableDto;
 import kitchenpos.application.request.TableGroupCreateRequest;
+import kitchenpos.domain.Menu;
+import kitchenpos.domain.MenuGroup;
+import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.domain.Product;
 import kitchenpos.domain.TableGroup;
+import kitchenpos.persistence.MenuGroupRepository;
+import kitchenpos.persistence.MenuRepository;
 import kitchenpos.persistence.OrderRepository;
 import kitchenpos.persistence.OrderTableRepository;
+import kitchenpos.persistence.ProductRepository;
 import kitchenpos.support.ServiceTest;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator.ReplaceUnderscores;
 import org.junit.jupiter.api.Nested;
@@ -37,6 +45,15 @@ class TableGroupServiceTest extends ServiceTest {
 
     @Autowired
     private TableGroupService tableGroupService;
+
+    @Autowired
+    private ProductRepository productRepository;
+
+    @Autowired
+    private MenuGroupRepository menuGroupRepository;
+
+    @Autowired
+    private MenuRepository menuRepository;
 
     @Nested
     class 테이블_그룹_생성시 {
@@ -115,18 +132,22 @@ class TableGroupServiceTest extends ServiceTest {
     @Nested
     class 테이블_그룹_해제 {
 
+        private Menu menu;
+
+        @BeforeEach
+        void setUp() {
+            Product product = productRepository.save(new Product("족발", BigDecimal.valueOf(1000.00)));
+            Long menuGroupId = menuGroupRepository.save(new MenuGroup("세트")).getId();
+            menu = menuRepository.save(
+                new Menu("황족발", BigDecimal.valueOf(1800.00), menuGroupId, List.of(new MenuProduct(product, 2))));
+        }
+
         @Test
         void 성공() {
             // given
             OrderTable orderTableA = orderTableRepository.save(new OrderTable(2, true));
             OrderTable orderTableB = orderTableRepository.save(new OrderTable(3, true));
-
-            orderRepository.save(
-                new Order(orderTableA.getId(), OrderStatus.COMPLETION, LocalDateTime.now(), Collections.emptyList()));
-            orderRepository.save(
-                new Order(orderTableB.getId(), OrderStatus.COMPLETION, LocalDateTime.now(), Collections.emptyList()));
-            TableGroup tableGroup = tableGroupService.create(new TableGroupCreateRequest(
-                List.of(new OrderTableDto(orderTableA.getId()), new OrderTableDto(orderTableB.getId()))));
+            TableGroup tableGroup = tableGroupService.create(new TableGroupCreateRequest(List.of(new OrderTableDto(orderTableA.getId()), new OrderTableDto(orderTableB.getId()))));
 
             // when
             assertDoesNotThrow(() -> tableGroupService.ungroup(tableGroup.getId()));
@@ -138,12 +159,12 @@ class TableGroupServiceTest extends ServiceTest {
             // given
             OrderTable orderTableA = orderTableRepository.save(new OrderTable(2, true));
             OrderTable orderTableB = orderTableRepository.save(new OrderTable(3, true));
-            orderRepository.save(
-                new Order(orderTableA.getId(), orderStatus, LocalDateTime.now(), Collections.emptyList()));
-            orderRepository.save(
-                new Order(orderTableB.getId(), orderStatus, LocalDateTime.now(), Collections.emptyList()));
             TableGroup tableGroup = tableGroupService.create(new TableGroupCreateRequest(
                 List.of(new OrderTableDto(orderTableA.getId()), new OrderTableDto(orderTableB.getId()))));
+            orderTableA.changeEmpty(false);
+            orderTableB.changeEmpty(false);
+            orderRepository.save(new Order(orderTableA, orderStatus, List.of(new OrderLineItem(menu.getId(), 2))));
+            orderRepository.save(new Order(orderTableA, orderStatus, List.of(new OrderLineItem(menu.getId(), 3))));
 
             // when && then
             assertThatThrownBy(() -> tableGroupService.ungroup(tableGroup.getId()))
